# opencv-sample

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  grayworld.cpp  grayworld.hpp  main.cpp  util.cpp  util.hpp
